--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.12.0", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0" 
 dotenv = "0.15.0"
+nalgebra = "0.32.2"
+nalgebra-sparse = "0.9.0"
