--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         ".\\server\\Cargo.toml",
         ".\\server\\Cargo.toml",
         ".\\server\\Cargo.toml",
+        ".\\server\\Cargo.toml",
         ".\\server\\Cargo.toml"
     ],
     "cmake.configureOnOpen": false
