--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,3 +17,4 @@ nalgebra-sparse = "0.9.0"
 bimap = "0.6.3"
 strum = "0.24.1"
 strum_macros = "0.24"
+rocket = { version = "=0.5.0-rc.3", features = ["json"] }
